node-main/deps/v8/test/message/fail/class-fields-private-outside-class.out
*%(basename)s:6: SyntaxError: Private field '#x' must be declared in an enclosing class
new Foo().#x;
         ^
SyntaxError: Private field '#x' must be declared in an enclosing class